Flashcards: Try to avoid scrollbars on the body.

--- a/web-files/flashcards.css
+++ b/web-files/flashcards.css
@@ -130,7 +130,7 @@ button#next-button:hover {
 }
 
 .note.question > .more {
-  visibility: hidden;
+  display: none;
 }
 
 .cards {
